# gim

./: CLAUDE.md  README.md  pyproject.toml  setup.py
gim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
